test/passing/tests/functor-414.ml.opts
--ocaml-version=4.14
